--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "sqlite3": "^5.1.4"
+  }
 }
